saving progress. new method for defining property getters in sample tests

--- a/sample/index.html
+++ b/sample/index.html
@@ -1,18 +1,23 @@
 <head>
   <title>Sample Tests</title>
+  <style>
+    .box {
+      background-color: #fcc;
+    }
+  </style>
 <head>
 <body>
   <h1>Grading Engine Test!</h1>
-  <div>a</div>
-  <div>b</div>
-  <div>c</div>
-  <div>d</div>
-  <div>e</div>
-  <div>f</div>
-  <div>g</div>
-  <div>h</div>
-  <div>i</div>
-  <div>j</div>
+  <div class="box 1">a</div>
+  <div class="box 2">b</div>
+  <div class="box 3">c</div>
+  <div class="box 4">d</div>
+  <div class="box 5">e</div>
+  <div class="box 6">f</div>
+  <div class="box 7">g</div>
+  <div class="box 8">h</div>
+  <div class="box 9">i</div>
+  <div class="box 10">j</div>
   <script src='../dist/udgrader-003.js'></script>
   <script src='sample_tests.js'></script>
 </body>
