--- a/src/webcomponents/test-widget.html
+++ b/src/webcomponents/test-widget.html
@@ -8,7 +8,7 @@ Listens for 'suite-passed' events. Emits a 'grader-passed' event
 when all suites pass.
 -->
 
-<link rel="import" href="/frontend-grading-engine/templates/test-suite.html">
+<link rel="import" href="/frontend-grading-engine/src/webcomponents/test-suite.html">
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro">
 
 <template id="test-widget">
@@ -125,14 +125,13 @@ when all suites pass.
         twd.appendChild(ts);
       }
 
-      // just in case GE.suites are already there
+      // just in case suites in GE.suites are already there
       GE.suites.forEach(function(val, index, arr) {
         console.log('adding previously defined suite')
         createSuite(val);
       })
 
       Array.observe(GE.suites, function(change) {
-        // console.log("observed a change in suites! This means that this script is running before registerSuites() action happens.");
         if (change[0].type === 'splice') {
           createSuite(change[0].object[0]);
         }
