<newlogic> 	engine has standard grading workflow with callbacks <add/fix> 	toBeGreaterThan 	ToBeLessThan 	toExist 	toEqual 	moved non-param functions into properties with getters

--- a/sample/index.html
+++ b/sample/index.html
@@ -18,6 +18,7 @@
   <div class="box 8">h</div>
   <div class="box 9">i</div>
   <div class="box 10">j</div>
+  <p>Hello, I'm a <code>p</code> tag.</p>
   <script src='../dist/udgrader-003.js'></script>
   <script src='sample_tests.js'></script>
 </body>
