--- a/sample/index.html
+++ b/sample/index.html
@@ -8,16 +8,16 @@
 <head>
 <body>
   <h1>Grading Engine Test!</h1>
-  <div class="box 1">a</div>
-  <div class="box 2">b</div>
-  <div class="box 3">c</div>
-  <div class="box 4">d</div>
-  <div class="box 5">e</div>
-  <div class="box 6">f</div>
-  <div class="box 7">g</div>
-  <div class="box 8">h</div>
-  <div class="box 9">i</div>
-  <div class="box 10">j</div>
+  <div class="box box1" test>a</div>
+  <div class="box box2" test>b</div>
+  <div class="box box3" test>c</div>
+  <div class="box box4" test>d</div>
+  <div class="box box5" test="hi">e</div>
+  <div class="box box6" test>f</div>
+  <div class="box box7" test>g</div>
+  <div class="box box8" test>h</div>
+  <div class="box box9" test>i</div>
+  <div class="box box10">j</div>
   <p>Hello, I'm a <code>p</code> tag.</p>
   <script src='../dist/udgrader-003.js'></script>
   <script src='sample_tests.js'></script>
