<add> 	not (pretty sure it's working!) <fix> 	toExist logic

--- a/sample/index.html
+++ b/sample/index.html
@@ -8,15 +8,15 @@
 <head>
 <body>
   <h1>Grading Engine Test!</h1>
-  <div class="box box1" test>a</div>
-  <div class="box box2" test>b</div>
-  <div class="box box3" test>c</div>
-  <div class="box box4" test>d</div>
-  <div class="box box5" test="hi">e</div>
-  <div class="box box6" test>f</div>
-  <div class="box box7" test>g</div>
-  <div class="box box8" test>h</div>
-  <div class="box box9" test>i</div>
+  <div class="box box1">a</div>
+  <div class="box box2">b</div>
+  <div class="box box3">c</div>
+  <div class="box box4">d</div>
+  <div class="box box5">e</div>
+  <div class="box box6">f</div>
+  <div class="box box7">g</div>
+  <div class="box box8">h</div>
+  <div class="box box9">i</div>
   <div class="box box10">j</div>
   <p>Hello, I'm a <code>p</code> tag.</p>
   <script src='../dist/udgrader-003.js'></script>
