--- a/sample/index.html
+++ b/sample/index.html
@@ -4,6 +4,44 @@
     .box {
       background-color: #fcc;
     }
+    .flex-container {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .flex {
+      margin-right: 10px;
+      margin-bottom: 10px;
+    }
+
+    .flex:last-of-type {
+      margin-right: 0px;
+    }
+
+    .flex1 {
+      background-color: #ffc;
+      min-height: 30px;
+      min-width: calc( (100% - 10px) / 4);
+    }
+    .flex2 {
+      background-color: #fcc;
+      min-height: 30px;
+      min-width: calc( (100% - 10px) / 4);
+    }
+    .flex3 {
+      background-color: #cff;
+      min-height: 30px;
+      min-width: calc( (100% - 10px) / 4);
+    }
+    .flex4 {
+      background-color: #fcf;
+      min-height: 30px;
+      min-width: calc( (100% - 10px) / 4);
+    }
+    .flex5 {
+      background-color: #cfc;
+      min-height: 30px;
+      min-width: calc( (100% - 10px) / 4);
+    }
   </style>
 <head>
 <body>
@@ -12,13 +50,20 @@
   <div class="box box2">b</div>
   <div class="box box3">c</div>
   <div class="box box4">d</div>
-  <div class="box box5">e</div>
+  <div class="box box5" test>e</div>
   <div class="box box6">f</div>
   <div class="box box7">g</div>
   <div class="box box8">h</div>
   <div class="box box9">i</div>
   <div class="box box10">j</div>
   <p>Hello, I'm a <code>p</code> tag.</p>
+  <div class="flex-container">
+    <div class="flex flex1"></div>
+    <div class="flex flex2"></div>
+    <div class="flex flex3"></div>
+    <div class="flex flex4"></div>
+    <div class="flex flex5"></div>
+  </div>
   <script src='../dist/udgrader-003.js'></script>
   <script src='sample_tests.js'></script>
 </body>
