--- a/src/webcomponents/active-test.html
+++ b/src/webcomponents/active-test.html
@@ -116,7 +116,8 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
       @param: none
       */
       function runSyncTest() {
-        var gradeRunner = setInterval(function() {
+
+        var TA = function () {
           // run the test
           try {
             var testResult = grader(iwant);
@@ -142,7 +143,16 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
           if (testCorrect || noRepeat) {
             clearInterval(gradeRunner);
           }
-        }, 1000)
+        };
+
+        var gradeRunner = setInterval(TA, 1000);
+
+        td.addEventListener('test-pause', function (e) {
+          clearInterval(gradeRunner);
+        });
+        td.addEventListener('test-start', function (e) {
+          gradeRunner = setInterval(TA, 1000);
+        });
       }
       
       // TODO: check that this still works
