--- a/src/webcomponents/test-widget.html
+++ b/src/webcomponents/test-widget.html
@@ -20,7 +20,6 @@ when all suites pass.
     .test-widget-display {
       position: absolute;
       min-width: 200px;
-      max-width: 400px;
       background-color: rgba(230, 230, 230, 0.8);
       opacity: 0.5;
       right: 0px;
@@ -32,13 +31,13 @@ when all suites pass.
       transition: opacity 0.3s, max-height 0.3s;;
     }
 
-    @media screen and (max-width: 800px) {
+/*    @media screen and (max-width: 800px) {
       .test-widget-display {
         max-width: 300px;
         max-height: 100vh;
         overflow-y: scroll;
       }
-    }
+    }*/
 
     .test-widget-display:hover {
       opacity: 1;
@@ -67,12 +66,16 @@ when all suites pass.
     }
   </style>
   <div class="test-widget-display">
-    <div class="udacity-header">Udacity Feedback</div><button class="toggle_display shown"> Test Results</button>
+    <div class="udacity-header">Udacity Feedback</div>
+    <button class="toggle_display shown"> Test Results</button>
+    <div class="test-suites"></div>
+    <button class="add-suite" onclick="createSuite();">+</button>
   </div>
 </template>
 
 <script>
   (function() {
+    'use strict';
     var importDoc = document.currentScript.ownerDocument; // importee
 
     // Define and register <test-widget>
@@ -119,21 +122,29 @@ when all suites pass.
         }
       });
 
+      // export this instead?
       function createSuite(newSuite) {
-        var ts = document.createElement('test-suite');
-        ts.suite = newSuite;
-        twd.appendChild(ts);
+        var testSuite = document.createElement('test-suite');
+        var testSuites = twd.querySelector('.test-suites');
+        testSuite.suite = newSuite;
+        testSuites.appendChild(testSuite);
+
+        activeTestObserver.registerSuite(newSuite);
       }
 
       // just in case suites in GE.suites are already there
-      GE.suites.forEach(function(val, index, arr) {
-        createSuite(val);
+      GE.suites.forEach(function (suite, index, arr) {
+        suite.index = index;
+        createSuite(suite);
       })
 
       Array.observe(GE.suites, function(change) {
         if (change[0].type === 'splice') {
-          change.forEach(function(val, index, arr) {
-            createSuite(val.object[index]);
+          var suites = change[0].object;
+          suites.forEach(function(suite, index, arr) {
+            if (!suiteObserver.hasSuite(suite)) {
+              createSuite(suite);
+            }
           })
         }
       })
@@ -144,4 +155,12 @@ when all suites pass.
   
   var tw = document.createElement('test-widget');
   document.body.appendChild(tw);
+  function createSuite() {
+    GE.suites.push({
+      name: 'name',
+      code: 'code',
+      tests: [],
+      id: parseInt(Math.random() * 1000000)
+    })
+  };
 </script>
